<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.LoginActivity">

    <EditText
    android:id="@+id/editTextLoginEmail"
    android:layout_width="@dimen/log_width"
    android:layout_height="wrap_content"
    android:ems="10"
    android:layout_marginTop="@dimen/layout_marginTop"
    android:inputType="textEmailAddress"
    android:layout_centerHorizontal="true"
    android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="@dimen/log_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextLoginEmail"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_below="@id/editTextLoginPassword"
        android:layout_alignLeft="@id/editTextLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLoginPassword"
        android:layout_alignRight="@id/editTextLoginPassword"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSignUp"
        android:layout_alignRight="@id/editTextLoginPassword"
        android:text="@string/forgotPassword"/>


</RelativeLayout>