<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.RegisterActivity">


    <EditText
        android:id="@+id/editTextRegisterPhoneNumber"
        android:layout_width="@dimen/log_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:layout_centerHorizontal="true"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="@dimen/log_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTextRegisterPhoneNumber"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_below="@id/editTextRegisterPassword"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />
</RelativeLayout>